src/objects/Campaign_Brand__c.object
<CustomObject>
    <fields>
        <fullName>Agency_Campaign__c</fullName>
        <label>Agency Campaign</label>
        <referenceTo>Agency_Campaign__c</referenceTo>
        <relationshipLabel>Campaign Brands</relationshipLabel>
        <relationshipName>Campaign_Brands1</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Brand_Name__c</fullName>
        <formula>Brand__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <label>Brand</label>
        <referenceTo>Brand__c</referenceTo>
        <relationshipLabel>Campaign Brands</relationshipLabel>
        <relationshipName>Campaign_Brand</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <formula>Agency_Campaign__r.End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <label>Campaign Brand</label>
    <nameField>
        <displayFormat>CB-{0000}</displayFormat>
        <label>Campaign Brand #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Brands</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>